Change flyouts to close when mousing out.  Also since rect/ellipse flyouts can no longer get stuck open, remove code to hide them and change color picker to not be a flyout

--- a/svg-editor.css
+++ b/svg-editor.css
@@ -200,12 +200,12 @@ div.color_block {
 	padding: 2px;
 }
 
-#svg_editor #color_pick {
+#svg_editor #color_picker {
 	position: absolute;
 	display: none;
 	background: #E8E8E8;
-	border: 1px solid #808080;
-	padding: 5px;
+/*	border: 1px solid #808080;
+	padding: 5px;*/
 }
 
 #svg_editor .tools_flyout {
